--- a/scss/components/content.scss
+++ b/scss/components/content.scss
@@ -12,7 +12,7 @@ main {
         background-position: center;
         background-size: 96%;
         background-repeat: no-repeat;
-        @include bp(small) {
+        @include bp(medium) {
           background-size: cover;
         }
       }
