--- a/scss/components/content.scss
+++ b/scss/components/content.scss
@@ -3,6 +3,7 @@
 /*****************************************/
 main {
   &.home {
+    margin-top: -70px;
     section {
       &.intro {
         height: 45vh;
