--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -2,7 +2,7 @@
 /*                  HEADER                */
 /*****************************************/
 header {
-  background-color: $cl-purple;
+  // background-color: $cl-purple;
   &.navbar {
     // background-color: $cl-white;
     .navbar-brand {
