--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
-@import 'basic/variables.scss';
-@import 'basic/mixins.scss';
-@import 'basic/responsive.scss';
-@import 'basic/typography.scss';
-@import 'basic/base.scss';
-@import 'components/header.scss';
-@import 'components/content.scss';
+@import "basic/variables.scss";
+@import "basic/mixins.scss";
+@import "basic/responsive.scss";
+@import "basic/typography.scss";
+@import "basic/base.scss";
+@import "components/header.scss";
+@import "components/content.scss";
+@import "components/footer.scss";
