--- a/scss/basic/base.scss
+++ b/scss/basic/base.scss
@@ -15,6 +15,7 @@ h1 {
   font-family: $font-primary;
   font-weight: 600;
   color: $cl-black;
+  line-height: 1.75;
 }
 
 h2 {
@@ -97,6 +98,16 @@ a {
 
   &.btn-link {
     background-color: transparent;
+  }
+  &.btn-outline-primary {
+    color: $cl-red;
+    border: 2px solid $cl-red;
+    &:hover,
+    &:focus,
+    &:active {
+      color: $cl-white;
+      background-color: $cl-red;
+    }
   }
 }
 .cl-black {
