--- a/scss/components/content.scss
+++ b/scss/components/content.scss
@@ -15,7 +15,15 @@ main {
       }
       &.search {
         margin-top: -80px;
-        // z-index: $max-z-index;
+      }
+      &.info {
+        .width {
+          width: 50%;
+          margin: 0 auto;
+          @include bp(medium) {
+            width: 100%;
+          }
+        }
       }
     }
   }
