--- a/scss/components/content.scss
+++ b/scss/components/content.scss
@@ -16,14 +16,7 @@ main {
       &.search {
         margin-top: -80px;
       }
-      &.info {
-        .width {
-          width: 50%;
-          margin: 0 auto;
-          @include bp(medium) {
-            width: 100%;
-          }
-        }
+      &.newsletter {
       }
     }
   }
