--- a/scss/basic/variables.scss
+++ b/scss/basic/variables.scss
@@ -4,16 +4,16 @@
 $cl-black: #34297a;
 $cl-white: #ffffff;
 $cl-purple: #8181e5;
+$cl-light-purple: #9f8af5;
 $cl-red: #fa6b6b;
+$cl-green: #24c89a;
 $cl-border: #ced4da;
-$cl-text: #505e7b;
-
+$cl-text: #505e7b; /**/
 /*******************************************/
 /*                 FONTS                  */
 /*****************************************/
 $font-primary: "Lexend", sans-serif;
-$font-secondary: "Lexend", sans-serif;
-
+$font-secondary: "Lexend", sans-serif; /**/
 /*******************************************/
 /*                 SIZE                   */
 /*****************************************/
@@ -31,8 +31,7 @@ $size50: 50px;
 $size60: 60px;
 $size70: 70px;
 $size75: 75px;
-$size80: 80px;
-
+$size80: 80px; /**/
 /*******************************************/
 /*                Z-INDEX                 */
 /*****************************************/
