--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -1,6 +1,10 @@
+/*******************************************/
+/*                 FOOTER                 */
+/*****************************************/
+
 footer {
-  a,
-  span {
-    color: $cl-black;
-  }
+    a,
+    span {
+        color: $cl-black;
+    }
 }
