--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 /*******************************************/
 /*              VARIABLES                 */
 /*****************************************/
+/**/
 /*******************************************/
 /*                 FONTS                  */
 /*****************************************/
+/**/
 /*******************************************/
 /*                 SIZE                   */
 /*****************************************/
+/**/
 /*******************************************/
 /*                Z-INDEX                 */
 /*****************************************/
@@ -20,7 +23,7 @@
 /*@include bp(small) {
 }*/
 /*@media (max-width:767px) {
-    
+
 }*/
 /*******************************************/
 /*            FONTS & TYPOGRAPHY          */
@@ -64,6 +67,9 @@ p {
   font-size: 15px;
   color: #505e7b; }
 
+.small {
+  font-size: 13px; }
+
 a {
   text-decoration: none;
   font-size: 15px; }
@@ -76,6 +82,10 @@ a {
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   border-radius: 4px; }
+  .btn:focus {
+    box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px !important; }
+  .btn:active, .btn:focus, .btn:hover {
+    color: #ffffff; }
   .btn.btn-lg {
     padding: 15px 25px; }
   .btn.btn-light {
@@ -87,7 +97,7 @@ a {
   .btn.btn-outline-primary {
     color: #fa6b6b;
     border: 2px solid #fa6b6b; }
-    .btn.btn-outline-primary:hover, .btn.btn-outline-primary:focus, .btn.btn-outline-primary:active {
+    .btn.btn-outline-primary:active, .btn.btn-outline-primary:focus, .btn.btn-outline-primary:hover {
       color: #ffffff;
       background-color: #fa6b6b; }
 
@@ -103,6 +113,12 @@ a {
 .cl-red {
   color: #fa6b6b; }
 
+.cl-green {
+  color: #24c89a; }
+
+.cl-text {
+  color: #505e7b; }
+
 .bg-black {
   background-color: #34297a; }
 
@@ -115,11 +131,14 @@ a {
 .bg-red {
   background-color: #fa6b6b; }
 
+.bg-green {
+  background-color: #24c89a; }
+
 .rounded {
   border-radius: 6px !important; }
 
 .shadow {
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px !important; }
+  box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px !important; }
 
 .input-group-text {
   background-color: rgba(129, 129, 229, 0.1); }
@@ -139,6 +158,9 @@ a {
 /*******************************************/
 /*                  HEADER                */
 /*****************************************/
+@media (max-width: 767px) {
+  header {
+    background-color: #8181e5; } }
 header.navbar .navbar-brand img {
   width: auto;
   height: 30px; }
@@ -153,22 +175,54 @@ header.navbar .navbar-collapse .navbar-nav .nav-item .nav-link {
     color: #ffffff;
     padding: 10px 20px;
     background-color: #fa6b6b; }
+  header.navbar .navbar-collapse .navbar-nav .nav-item .nav-link.cart-trigger .bullet {
+    top: 0;
+    right: 0;
+    padding: 0 7px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    border-radius: 100px; }
+    @media (max-width: 767px) {
+      header.navbar .navbar-collapse .navbar-nav .nav-item .nav-link.cart-trigger .bullet {
+        top: 5px;
+        right: -10px; } }
+  @media (max-width: 767px) {
+    header.navbar .navbar-collapse .navbar-nav .nav-item .nav-link.cart-trigger {
+      width: 40px;
+      position: absolute !important;
+      top: 0;
+      right: 70px; } }
 
 /*******************************************/
 /*                CONTENT                 */
 /*****************************************/
-main.home {
+main {
   margin-top: -70px; }
-  main.home section.intro {
-    height: 45vh;
+  main section.intro {
+    height: 25vh;
     background-color: #8181e5;
     background-image: url("../images/cover-purple.png");
-    background-position: center;
+    background-position: bottom 5% center;
     background-size: cover;
     background-repeat: no-repeat; }
-  main.home section.search {
+  main section.search {
     margin-top: -80px; }
+  main.home section.intro {
+    height: 45vh; }
+  @media (max-width: 767px) {
+    main.home section.info .h-100 {
+      height: auto !important; } }
 
+.nav.nav-pills .nav-item .nav-link {
+  color: #505e7b; }
+  .nav.nav-pills .nav-item .nav-link.active {
+    color: #ffffff;
+    background-color: #8181e5; }
+
+/*******************************************/
+/*                 FOOTER                 */
+/*****************************************/
 footer a,
 footer span {
   color: #34297a; }
